[package]
name = "fdo-randomizer"
version = "1.3.0"
authors = ["Akseli Lukkarila <esgrove@outlook.com>"]
description = "FDO Impro competition song randomizer"
edition = "2024"
license = "MIT"
readme = "README.md"
repository = "https://github.com/Esgrove/fdo-randomizer"
keywords = ["cli", "music", "randomizer"]
categories = ["command-line-utilities"]
rust-version = "1.94.0"

[dependencies]
anyhow = { version = "1.0.103", features = ["backtrace"] }
clap = { version = "4.6.1", features = ["derive"] }
clap_complete = "4.6.5"
colored = "3.1.1"
dirs = "6.0.0"
dunce = "1.0.5"
rand = "0.10.1"

[[bin]]
name = "fdo-randomizer"
path = "src/main.rs"

[profile.dev]
incremental = true

[profile.release]
lto = true
# https://doc.rust-lang.org/rustc/codegen-options/index.html#codegen-units
codegen-units = 1

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
# https://rust-lang.github.io/rust-clippy/master/index.html
enum_glob_use = "deny"
unwrap_used = "deny"
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
missing_panics_doc = "allow"
